CSRFを対策しました

--- a/src/main/resources/templates/bbs.html
+++ b/src/main/resources/templates/bbs.html
@@ -20,6 +20,9 @@
 	<input type="text" name="name"><br>
 	内容<br>
 	<textarea rows="5" cols="20" name="body"></textarea><br>
+	<!-- 追加　開始 -->
+	<input type="hidden" name="token" th:value="${session.token}">
+	<!-- 追加　終了 -->
 	<button>投稿</button><br>
 </form>
 <div th:each="article, status:${session.articleList}">
